benchmarks/verus/bignum/vericoder_glm_15-09_18h46/debug/bignum_ModExp_DivMod_Zeroes_iter3_error.log
=== Verification Error - Iteration 3 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExp_DivMod_Zeroes.rs
Time: 2025-09-15 20:25:20

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_DivMod_Zeroes_impl.rs:60:31
   |
60 |     ensures result == Exp_int(base, Str2Int(exponent@)) % modulus
   |                       ------- ^^^^ expected `nat`, found `u64`
   |                       |
   |                       arguments to this function are incorrect
   |
note: function defined here
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_DivMod_Zeroes_impl.rs:5:9
   |
5  | spec fn Exp_int(x: nat, y: nat) -> nat
   |         ^^^^^^^ ------

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_DivMod_Zeroes_impl.rs:60:59
   |
60 |     ensures result == Exp_int(base, Str2Int(exponent@)) % modulus
   |                       ------------------------------------^^^^^^^
   |                       |                                   |
   |                       |                                   expected `nat`, found `u64`
   |                       arguments to this method are incorrect
   |
help: the return type of this call is `u64` due to the type of the argument passed
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_DivMod_Zeroes_impl.rs:60:23
   |
60 |     ensures result == Exp_int(base, Str2Int(exponent@)) % modulus
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-------
   |                                                           |
   |                                                           this argument influences the return type of `spec_euclidean_mod`
note: method defined here
  --> /Users/runner/work/verus/verus/source/builtin/src/lib.rs:1061:8

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.

--------------------------------------------------------------------------------

Additional Output:
error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_DivMod_Zeroes_impl.rs:60:31
   |
60 |     ensures result == Exp_int(base, Str2Int(exponent@)) % modulus
   |                       ------- ^^^^ expected `nat`, found `u64`
   |                       |
   |                       arguments to this function are incorrect
   |
note: function defined here
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_DivMod_Zeroes_impl.rs:5:9
   |
5  | spec fn Exp_int(x: nat, y: nat) -> nat
   |         ^^^^^^^ ------

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_DivMod_Zeroes_impl.rs:60:59
   |
60 |     ensures result == Exp_int(base, Str2Int(exponent@)) % modulus
   |                       ------------------------------------^^^^^^^
   |                       |                                   |
   |                       |                                   expected `nat`, found `u64`
   |                       arguments to this method are incorrect
   |
help: the return type of this call is `u64` due to the type of the argument passed
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_DivMod_Zeroes_impl.rs:60:23
   |
60 |     ensures result == Exp_int(base, Str2Int(exponent@)) % modulus
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-------
   |                                                           |
   |                                                           this argument influences the return type of `spec_euclidean_mod`
note: method defined here
  --> /Users/runner/work/verus/verus/source/builtin/src/lib.rs:1061:8

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
